--- a/STS.Workbench/Properties/Resources.resx
+++ b/STS.Workbench/Properties/Resources.resx
@@ -217,4 +217,10 @@
   <data name="tableSmall" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tableSmall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="place_tableTansperent" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\place_tableTansperent.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="undo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\undo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
